<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

        <TextView
                android:id="@+id/text_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="30sp"
                tools:text="2019년"/>

        <TextView
                android:id="@+id/text_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                tools:text="12월"
                />
    </LinearLayout>


    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="7"
            android:useDefaultMargins="true"
            >

        <TextView
                android:text="@string/sunday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text_sunday"
                />

        <TextView
                android:text="@string/monday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:text="@string/tuesday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:text="@string/wednesday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:text="@string/thursday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:text="@string/friday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:text="@string/saturday"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text_saturday"
                />
    </GridLayout>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager2_months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

</LinearLayout>